--- a/index.html
+++ b/index.html
@@ -7,15 +7,11 @@
   <meta name="author" content="">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
-  <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-
-  <p>Hello, world!</p>
-
-  <script src="js/script.js"></script>
+  <canvas id="canavs"></canvas>
+  <script type="module" src="js/script.js"></script>
 </body>
 
 </html>
